[gd_scene load_steps=7 format=3 uid="uid://2w0rb8651ynm"]

[ext_resource type="Script" path="res://scenes/UI/HUD/Allies/crea_v_box.gd" id="1_d5uwa"]
[ext_resource type="StyleBox" uid="uid://bn77hwn55wtsk" path="res://shared_assets/UI/button_normal_styleboxtexture.tres" id="1_n0y55"]
[ext_resource type="StyleBox" uid="uid://8eudfxoe8j40" path="res://shared_assets/UI/button_hover_styleboxtexture.tres" id="2_v5g1w"]
[ext_resource type="StyleBox" uid="uid://wrrfixqq8c4o" path="res://shared_assets/UI/button_pressed_styleboxtexture.tres" id="3_lca44"]
[ext_resource type="StyleBox" uid="uid://c5gq8lv8robgu" path="res://shared_assets/UI/button_disabled_styleboxtexture.tres" id="4_nalee"]
[ext_resource type="Texture2D" uid="uid://c60xx52brghq2" path="res://icon.png" id="5_wum1u"]

[node name="CreaVBox" type="VBoxContainer"]
theme_override_constants/separation = 0
script = ExtResource("1_d5uwa")

[node name="CreaButton" type="Button" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = ExtResource("1_n0y55")
theme_override_styles/hover = ExtResource("2_v5g1w")
theme_override_styles/pressed = ExtResource("3_lca44")
theme_override_styles/disabled = ExtResource("4_nalee")
toggle_mode = true
icon = ExtResource("5_wum1u")
icon_alignment = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Samuel R"
horizontal_alignment = 1

[node name="HPLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "999/999"
horizontal_alignment = 1

[node name="SPLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "99/99"
horizontal_alignment = 1

[connection signal="toggled" from="CreaButton" to="." method="_on_crea_button_toggled"]
